typedload (2.19-1) unstable; urgency=low

  * New upstream release
  * Use jdupes to link duplicated images together

 -- Salvo 'LtWorf' Tomaselli <tiposchi@tiscali.it>  Mon, 03 Oct 2022 19:47:04 +0200

typedload (2.18-1) unstable; urgency=high

  * New upstream release

 -- Salvo 'LtWorf' Tomaselli <tiposchi@tiscali.it>  Tue, 16 Aug 2022 16:00:46 +0200

typedload (2.17-1) unstable; urgency=low

  * New upstream release
  * Bump Standards-Version: 4.6.1.0
  * Link svgfiles
  * Add debian/upstream/metadata file

 -- Salvo 'LtWorf' Tomaselli <tiposchi@tiscali.it>  Fri, 29 Jul 2022 22:21:58 +0200

typedload (2.16-1) unstable; urgency=low

  * New upstream release
  * Remove duplicate changelog from documentation
  * Remove duplicate gpl logo image from documentation

 -- Salvo 'LtWorf' Tomaselli <tiposchi@tiscali.it>  Thu, 20 Jan 2022 21:41:50 +0100

typedload (2.15-3) unstable; urgency=medium

  * Fix Breaks and Replace version (Closes: #1004013)

 -- Salvo 'LtWorf' Tomaselli <tiposchi@tiscali.it>  Thu, 20 Jan 2022 19:40:49 +0100

typedload (2.15-2) unstable; urgency=low

  * Add Breaks and Replace fields to prevent doc package to be installed
    alongside an older typedload version

 -- Salvo 'LtWorf' Tomaselli <tiposchi@tiscali.it>  Mon, 17 Jan 2022 16:46:26 +0100

typedload (2.15-1) unstable; urgency=low

  * New upstream release
  * Add -doc package that contains the html documentation

 -- Salvo 'LtWorf' Tomaselli <tiposchi@tiscali.it>  Fri, 14 Jan 2022 10:50:01 +0100

typedload (2.14-2) unstable; urgency=high

  * Remove mypy tests since they periodically fail (Closes: #1001736)

 -- Salvo 'LtWorf' Tomaselli <tiposchi@tiscali.it>  Wed, 15 Dec 2021 00:37:30 +0100

typedload (2.14-1) unstable; urgency=low

  * New upstream release

 -- Salvo 'LtWorf' Tomaselli <tiposchi@tiscali.it>  Thu, 02 Dec 2021 08:59:11 +0100

typedload (2.13-1) unstable; urgency=low

  * New upstream release
  * Changed LGPL exceptions
