@@ -1,3 +1,2 @@
 example.py
 docs/
-html/
